<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/range_selection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/range_selection_title"
        android:textSize="20sp"
        />

    <RadioGroup
        android:id="@+id/range_selection_groups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/range_selection_title"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shortRange"
            android:textSize="30sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediumRange"
            android:textSize="30sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longRange"
            android:textSize="30sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/range_selection_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/range_selection_ok"
        android:textSize="40sp"
        />

</RelativeLayout>
